# toolbench-mcp

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  start.ps1
scripts/: scrape_toolbench_assessments.py
src/toolbench_mcp/: __init__.py  __main__.py  app.py  config.py  content.py  meta_api.py  scraper_api.py  server.py
tests/: test_smoke.py
webapp/: index.html  package-lock.json  package.json  start.ps1  vite.config.ts
webapp/public/: glama.json
webapp/src/: App.tsx
webapp/src/components/: ChatFab.tsx  LoggerPanel.tsx
webapp/src/context/: LoggerContext.tsx  ThemeContext.tsx
webapp/src/layout/: AppShell.tsx
webapp/src/pages/: AppsPage.tsx  HelpPage.tsx  HomePage.tsx  SettingsPage.tsx  ToolsPage.tsx
webapp/src/styles/: globals.css
