[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolbench-mcp"
version = "0.3.0"
description = "FastMCP 3.1: Arcade ToolBench helper (links, rescoring, bundled Playwright scraper, Iron Shell webapp)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sandra Schieder" }]
dependencies = [
    "fastmcp>=3.1",
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8"]
scraper = ["playwright>=1.49.0"]

[project.urls]
Homepage = "https://github.com/sandraschi/toolbench-mcp"
Repository = "https://github.com/sandraschi/toolbench-mcp"

[project.scripts]
toolbench-mcp = "toolbench_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "C90", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLO", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "D100", "D104", "S101", "G004", "PLR0913", "TRY003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
